@@ -10,7 +10,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -44,7 +43,7 @@ public class VersionRenderer {
             return;
         }
         Map<String, Integer> versionTypeMap = Maps.newHashMap();
-        List<Integer> ids = idSet.stream().sorted(Collections.reverseOrder()).collect(Collectors.toList());
+        List<Integer> ids = idSet.stream().sorted(Collections.reverseOrder()).toList();
         int bound = ids.size();
         IntStream.range(0, bound).forEach(i -> {
             int buildId = ids.get(i);
