@@ -45,7 +45,7 @@ public class ApplicationPacker implements IWrapper<ApplicationVO.Application> {
         List<ApplicationResource> applicationResourceList = applicationResourceService.queryByApplication(application.getId());
         List<ApplicationResourceVO.Resource> resources = BeanCopierUtil.copyListProperties(applicationResourceList, ApplicationResourceVO.Resource.class).stream()
                 .peek(resourcePacker::wrapProperties)
-                .collect(Collectors.toList());
+                .toList();
         resources.forEach(applicationResourceInstancePacker::wrap);
         Map<String, List<ApplicationResourceVO.Resource>> resourcesMap = resources.stream()
                 .collect(Collectors.groupingBy(ApplicationResourceVO.Resource::getResourceType));
